# taichi-poetry-template

./: README.md  pyproject.toml
taichi_demo/: main.py
