[tool.poetry]
name = "taichi-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "taichi_demo"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
taichi = "^1.1.2"
numpy = "^1.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#Mirrors
[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple"
default = true

